--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: home
-title: Anudit Verma
-subtitle: Let me introduce you to my geek side!
-meta-title: "Hi, I'm Anudit"
+title: ABC Pvt Ltd
+subtitle: Vast Galore to choose from!
+meta-title: "One Stop Solution for Your Needs"
 use-site-title: true
 cover-img:
-  - "/assets/img/nebula.jpg" : "The Helix Nebula"
+  - "/assets/img/homepage.jpg" : "Lighting Up Lives"
 ---
 
 <!-- Typed.js --> 
@@ -14,7 +14,7 @@ cover-img:
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["Technology.","Open Source.","Mathematics.","Space and the Cosmos.","Science.","Art.","Linux."],
+      strings: ["abc","xyz","pqr"],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
@@ -27,7 +27,7 @@ cover-img:
   <div class="row">
     <div class="col-sm-12">
       <div class="text-center">
-          <h1>I write about <span class="typed" style="color:#890000";></span></h1>
+          <h1>We deal in <span class="typed" style="color:#890000";></span></h1>
       </div>
     </div>
   </div>
