--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Vast Galore to choose from!
 meta-title: "One Stop Solution for Your Needs"
 use-site-title: true
 cover-img:
-  - "/assets/img/homepage.jpg" : "Lighting Up Lives"
+  - "/assets/img/homepage.png" : "Lighting Up Lives"
 ---
 
 <!-- Typed.js --> 
