--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: ABC Pvt Ltd
+title: Venkateshwara Enterprises
 subtitle: Vast Galore to choose from!
 meta-title: "One Stop Solution for Your Needs"
 use-site-title: true
@@ -14,7 +14,7 @@ cover-img:
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["abc","xyz","pqr"],
+      strings: ["Cables & Wires","LED Lighting","Switchgear","Motors","Pvc Pipes","Switches Panel Accessories"],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
@@ -42,20 +42,20 @@ cover-img:
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="/assets/img/l1.png" style="width:100%">
-  <div class="text">Caption Text</div>
+  <img src="/assets/img/ll1.png" width="350" height="350">
+  <div class="text">PolyCab Wires and Cables</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="/assets/img/l2.png" style="width:100%">
-  <div class="text">Caption Two</div>
+  <img src="/assets/img/ll2.png" width="350" height="350">
+  <div class="text">Sample Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="/assets/img/l3.png" style="width:100%">
-  <div class="text">Caption Three</div>
+  <img src="/assets/img/l3.png" width="350" height="350">
+  <div class="text">Sample Text</div>
 </div>
 
 </div>
