center img slideshow

--- a/index.html
+++ b/index.html
@@ -34,28 +34,24 @@ cover-img:
 </div>
 
 
-
-
-
-
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
+  <div style="text-align:center">
   <img src="/assets/img/ll1.png" width="350" height="350">
-  <div class="text">PolyCab Wires and Cables</div>
+  </div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+  <div style="text-align:center">
   <img src="/assets/img/ll2.png" width="350" height="350">
-  <div class="text">Sample Text</div>
+  </div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="/assets/img/l3.png" width="350" height="350">
-  <div class="text">Sample Text</div>
+  <div style="text-align:center">
+     <img src="/assets/img/l3.png" width="350" height="350">
+  </div>
 </div>
 
 </div>
